# DKG

./: .gitignore  DKG_strategy.md  Incidental_targets.md  OUTPUT_COLUMNS.md  README.md  SETUP.md  analysis_prompting_guide.md  analysis_protocol.md  case_study.R  clr_preprocess.py  convert_to_feather.R  convert_to_feather.py  copilot_ppt_prompt.md  dkg_micromap_notes.md  error_msg.md  fitting_functions.R  graphomics-indiebio-demo-framing.md  pyproject.toml  registry.md  run_pair.R  scratch_conditional_mean_shape.R  scratch_conditional_variance_structure.R  scratch_distributional_shift.R  scratch_global_linear_association.R  scratch_joint_geometry.R  scratch_predictive_utility.R  scratch_regime_threshold_structure.R  scratch_relationship_stability.R  scratch_skewness_asymmetry.R  scratch_tail_behavior.R  session_log_AKT1_AKT2.md  session_log_discovery_platform.md  session_log_dkg_enrichment.md  session_log_graphminer_dkg.md  session_log_strategy_target_discovery.md  strategy.md  univariate_sweep.R  webui_tier1_assessment.md
.claude/: settings.local.json
audit/: 20260512_154156_dkg_001.md  20260512_154232_dkg_001_rev.md  20260517_144806_dkg_002.md  20260517_144821_dkg_002_rev.md  20260517_145242_dkg_003.md  20260517_145254_dkg_003_rev.md  20260517_165612_dkg_004.md  20260517_165624_dkg_004_rev.md  20260517_171919_dkg_005.md  20260517_171931_dkg_005_rev.md  20260517_172536_dkg_006.md  20260517_172548_dkg_006_rev.md  20260517_173637_dkg_007.md  20260517_173713_dkg_007_rev.md  20260517_174241_dkg_008.md  20260517_174253_dkg_008_rev.md  20260517_174657_dkg_009.md  (+34 more)
(+156 files in other folders)
